--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "artisan-labs/laravel-geo-database": "*",
         "artisan-labs/laravel-gmodel": "*",
         "artisan-labs/laravel-router": "*",
-        "artisan-labs/laravel-vicomposer sit-tracker": "*",
+        "artisan-labs/laravel-visit-tracker": "*",
         "artisan-labs/laravel-ide-helper-plus": "*",
         "delight-im/random": "^1.0",
         "league/flysystem-ftp": "^3.0",
