--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,17 @@
         "scssphp/scssphp": "^1.11",
         "prologue/alerts": "^1.0",
         "genealabs/laravel-model-caching": "^0.13.2",
-        "santigarcor/laratrust": "*",
-        "voku/html-min": "^4.5"
+        "spatie/laravel-permission": "^5.8",
+        "voku/html-min": "^4.5",
+        "spatie/laravel-tags": "^4.3",
+        "tucker-eric/eloquentfilter": "^3.0",
+        "creativeorange/gravatar": "^1.0",
+        "arcanedev/log-viewer": "^10.0",
+        "cybercog/laravel-ban": "^4.7",
+        "spatie/laravel-html": "^3.2",
+        "questocat/laravel-referral": "^1.0",
+        "spatie/laravel-activitylog": "^4.5",
+        "yadahan/laravel-authentication-log": "^1.4"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
