--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         "spatie/laravel-html": "^3.2",
         "questocat/laravel-referral": "^1.0",
         "spatie/laravel-activitylog": "^4.5",
-        "yadahan/laravel-authentication-log": "^1.4"
+        "yadahan/laravel-authentication-log": "^1.4",
+        "laravelcollective/html": "*"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
