--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,11 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/artisanbr/laravel-bs-components.git",
+            "reference": "master"
         }
     ],
     "require": {
